tests/typechecker/should_fail/fields_1.csp
channel a : Int.Int.Int
channel b : Int.Int
channel c : Int

P = c$x$y -> P
